// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelText matches noError snapshot: no error mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

<StyledHoc>
  <LabelText
    className="emotion-3 emotion-0"
  >
    <StyledLabelText
      className="emotion-3 emotion-0"
    >
      <span
        className="emotion-0 emotion-1 emotion-2"
      >
        example
      </span>
    </StyledLabelText>
  </LabelText>
</StyledHoc>
`;

exports[`LabelText matches wrapper snapshot: wrapper mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  font-weight: 700;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

<StyledHoc
  error="example"
>
  <LabelText
    className="emotion-3 emotion-0"
    error="example"
  >
    <StyledLabelText
      className="emotion-3 emotion-0"
      error="example"
    >
      <span
        className="emotion-0 emotion-1 emotion-2"
      >
        example
      </span>
    </StyledLabelText>
  </LabelText>
</StyledHoc>
`;
